--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
   <title>Weather For You</title>
 </head>
 <body>
-  
+  <h1 class="header">Weather For You</h1>
+  <input type="search" name="city-search" id="city-search">
+  <button>OK</button>
+  <table>
+    <tr class="date-row"></tr>
+    <tr class="weather-row"></tr>
+  </table>
 <script src="js/index.js"></script>
 </body>
 </html>
