--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 <body>
   <h1 class="header">Weather For You</h1>
   <input type="search" name="city-search" id="city-search">
-  <button>OK</button>
+  <button class="btn">OK</button>
   <table>
     <tr class="date-row"></tr>
     <tr class="weather-row"></tr>
   </table>
-<script src="js/index.js"></script>
+<script type="module" src="js/index.js"></script>
 </body>
 </html>
